--- a/_toc.yml
+++ b/_toc.yml
@@ -2,17 +2,17 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 
 format: jb-book
-root: community/welcome
+root: welcome
 parts:
   - chapters:
-    - file: community/about
-    - file: community/code-of-conduct
-    - file: community/meetings
-    - file: community/guides/index
+    - file: about
+    - file: code-of-conduct
+    - file: meetings
+    - file: guides/index
       sections:
-      - file: community/guides/error-guide
-    - file: community/hubs/index
+      - file: guides/error-guide
+    - file: hubs/index
       sections:
-      - file: community/hubs/admin
-      - file: community/hubs/user-groups
-      - file: community/hubs/privacy-notice
+      - file: hubs/admin
+      - file: hubs/user-groups
+      - file: hubs/privacy-notice
