--- a/_toc.yml
+++ b/_toc.yml
@@ -5,7 +5,7 @@ format: jb-book
 root: welcome
 parts:
   - chapters:
-    - file: about
+    - file: roles
     - file: code-of-conduct
     - file: meetings
     - file: guides/index
