--- a/roles.yaml
+++ b/roles.yaml
@@ -6,6 +6,8 @@ Steering committee:
       period: "2015-present"
     - name: "Anouk Vlug"
       period: "2020-2024"
+    - name: "Applications open"
+      period: "Get in touch!"
   past_role_holders:
   role_description: |
     The purpose of the steering committee is to guide the evolution of OGGM in alignment
