--- a/roles.yaml
+++ b/roles.yaml
@@ -4,11 +4,11 @@ Steering committee:
       period: "2015-present"
     - name: "Ben Marzeion"
       period: "2015-present"
-    - name: "Anouk Vlug"
-      period: "2020-2024"
     - name: "Applications open"
       period: "Get in touch!"
   past_role_holders:
+    - name: "Anouk Vlug"
+      period: "2020-2024"
   role_description: |
     The purpose of the steering committee is to guide the evolution of OGGM in alignment
     with its long-term mission and vision, ensuring that the project remains relevant, impactful,
@@ -88,11 +88,11 @@ Community moderators:
   role_holders:
     - name: "Patrick Schmitt"
       period: "2024-present"
-    - name: "Anouk Vlug"
-      period: "2020-2024"
     - name: "Applications open"
       period: "Get in touch!"
-  past_role_holders: []
+  past_role_holders: 
+    - name: "Anouk Vlug"
+      period: "2020-2024"
   role_description: |
     The purpose of the community moderators role is to foster a welcoming and supportive
     environment where community members can collaborate, learn, and share knowledge.
@@ -106,11 +106,11 @@ Meeting facilitators:
   role_holders:
     - name: "Fabien Maussion"
       period: "2024-present"
-    - name: "Anouk Vlug"
-      period: "2020-2024"
     - name: "Applications open"
       period: "Get in touch!"
-  past_role_holders: []
+  past_role_holders: 
+    - name: "Anouk Vlug"
+      period: "2020-2024"
   role_description: |
     The purpose of the meeting facilitators role is to create a space for transparent communication
     and community collaboration during our regular bi-weekly meetings.
@@ -139,8 +139,6 @@ OGGM and OGGM-Shop data curators:
 
 Workshop organisers:
   role_holders:
-    - name: "Anouk Vlug"
-      period: "2020-present"
     - name: "Ben Marzeion"
       period: "2015-present"
     - name: "Fabien Maussion"
@@ -148,6 +146,8 @@ Workshop organisers:
     - name: "Applications open"
       period: "Get in touch!"
   past_role_holders:
+    - name: "Anouk Vlug"
+      period: "2020-2024"
     - name: "Nicolas Champollion"
       period: "2019-2021"
     - name: "David Rounce"
